Fixed services layout on mobile.

--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -1,5 +1,5 @@
 .project{
-    display: none;
+    pointer-events: none;
 }
 body{
     margin: 0px;
@@ -73,13 +73,13 @@ footer{
 }
 .nav_links_container{
     margin: 0 10px 0 0;
-    width: 35%;
+    width: 70%;
     display: flex;
     flex-direction: row-reverse;
     align-items: center;
     box-sizing: border-box;
 }
-.nav_links_block{
+.nav_link_block{
     margin: 0;
     display: flex;
     flex-direction: column;
@@ -767,7 +767,7 @@ footer{
     background-color: grey;
     text-align: center;
     padding: 10px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-size: 18px;
     color: white;
 }
@@ -790,7 +790,7 @@ footer{
 
 /*Project Info Page CSS*/
 .project_info_bod{
-    background-color: #dce5e8;
+    background-color: #f0f0f2;
 }
 .inner_banner{
     width: 100%;
@@ -855,11 +855,12 @@ footer{
 }
 .inner_image{
     position: relative;
-    top: 50%;
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%);
     width: 100%;
     margin: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+
 }
 .inner_text_section{
     position: relative;
@@ -1357,7 +1358,7 @@ footer{
 
     /*Footer*/
     .footer_container{
-        width: 85%;
+        width: 90%;
         margin: auto;
     }
     .social_header_text{
@@ -1425,9 +1426,8 @@ footer{
     }
     .inner_image{
         position: relative;
-        top: 50%;
-        -ms-transform: translateY(-50%);
-        transform: translateY(-50%);
+        -ms-transform: none;
+        transform: none;
         height: 100%;
         margin: 0;
     }
